<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rw_rlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:paddingTop="16dp"
    android:background="@drawable/rect_ash_stroke_bg"
    android:layout_margin="8dp">

    <TextView android:id="@+id/rw_tv_tripid_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_id"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold" />
    <TextView android:id="@+id/rw_tv_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/rw_tv_tripid_title"
        android:text="####"
        android:gravity="left"
        android:textColor="@color/colorTextBlue"
        android:textSize="12sp"
        android:layout_marginLeft="8dp" />

    <TextView android:id="@+id/rw_tv_tdate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_date"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/rw_tv_tripid_title"
        android:layout_marginTop="10dp" />
    <TextView android:id="@+id/rw_tv_tdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/rw_tv_tdate_title"
        android:text="dd-mm-yyyy"
        android:gravity="left"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:layout_below="@+id/rw_tv_tripid_title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp" />

    <TextView android:id="@+id/rw_tv_vcat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veh_cat"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/rw_tv_tdate_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"/>
    <TextView android:id="@+id/rw_tv_vcat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Xxxx"
        android:textSize="12sp"
        android:layout_below="@+id/rw_tv_tdate_title"
        android:layout_toRightOf="@+id/rw_tv_vcat_title"
        android:textColor="@color/colorAsh"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"/>
    <TextView android:id="@+id/rw_tv_vreg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veh_reg"
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/rw_tv_vcat"
        android:layout_marginBottom="8dp"/>
    <TextView android:id="@+id/rw_tv_vreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AP XX XXXX"
        android:textSize="12sp"
        android:layout_below="@+id/rw_tv_vcat"
        android:layout_toRightOf="@+id/rw_tv_vreg_title"
        android:textColor="@color/colorAsh"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"/>

    <TextView android:id="@+id/rw_tv_rname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Route  - "
        android:textColor="@color/colorAsh"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/rw_tv_vreg"
        android:layout_marginBottom="8dp"/>
    <TextView android:id="@+id/rw_tv_rname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XX-XX"
        android:textSize="12sp"
        android:layout_below="@+id/rw_tv_vreg"
        android:layout_toRightOf="@+id/rw_tv_rname_title"
        android:textColor="@color/colorAsh"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"/>

    <TextView android:id="@+id/rw_tv_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rw_tv_rname_title"
        android:text="@string/accept_duty"
        android:background="@drawable/rect_stroke_orng_bg"
        android:textColor="#ff9100"
        android:textSize="12sp"
        android:layout_centerInParent="true"
        android:padding="8dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_margin="12dp" />

    <TextView android:id="@+id/rw_tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rw_tv_accept"
        android:text="@string/start_duty"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/rect_stroke_blue_bg"
        android:textSize="12sp"
        android:layout_centerInParent="true"
        android:padding="8dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:visibility="gone"/>



</RelativeLayout>