<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <RelativeLayout android:id="@+id/am_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:visibility="gone">
            <TextView android:id="@+id/am_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_in_progress"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:padding="12dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_centerInParent="true" />

            <TextView android:id="@+id/am_tv_my_duties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_duties"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rect_white_stroke_bg"
                android:gravity="center"
                android:padding="6dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="8dp"/>
            </RelativeLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_below="@+id/am_rl"/>

        <RelativeLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/am_ll">
        </RelativeLayout>

        <RelativeLayout android:id="@+id/am_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_toolbar"
            android:background="#9e9e9e">
            <LinearLayout
                android:id="@+id/am_ll_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rect_light_bg"
                android:padding="6dp"
                android:layout_margin="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/car_image"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"/>
                <View android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#424242"/>
                <TextView
                    android:id="@+id/am_tv_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView android:id="@+id/am_tv_staff_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff_details"
            android:textColor="#ff9100"
            android:background="@drawable/rect_stroke_orng_bg"
            android:padding="6dp"
            android:layout_below="@+id/am_rl"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:visibility="gone"/>

        <ImageButton android:id="@+id/am_ib_dots"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_human"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/round_btn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

        <TextView android:id="@+id/am_tv_finish_duty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/finish_duty"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rect_solid_orng_bg"
            android:textSize="14sp"
            android:padding="12dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"/>
            <TextView android:id="@+id/am_tv_save_duty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/save_data"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rect_solid_orng_bg"
                android:textSize="14sp"
                android:padding="12dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:visibility="gone"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>