<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:padding="24dp">
    <TextView android:id="@+id/al_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Employee Transportation"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="12dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:fontFamily="sans-serif-smallcaps"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:paddingTop="40dp">

        <EditText android:id="@+id/am_et_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_margin="10dp"
            android:padding="12dp"
            android:textColorHint="@color/colorBlack"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:fontFamily="sans-serif-smallcaps"/>
        <EditText android:id="@+id/am_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="10dp"
            android:padding="12dp"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:fontFamily="sans-serif-smallcaps"/>
        <Button android:id="@+id/am_bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:background="@drawable/rect_solid_orng_bg"
            android:fontFamily="sans-serif-smallcaps"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>


<!--<color name="colorPrimary">#2196f3</color>-->
<!--<color name="colorPrimaryDark">#1976d2</color>-->
<!--<color name="colorAccent">#ffab40</color>-->
<!--<color name="colorAsh">#414040</color>-->
<!--<color name="colorTextBlue">#0067de</color>-->
<!--<color name="colorBg">#6e6e6e</color>-->
<!--<color name="colorAshLight">#9e9e9e</color>-->
<!--<color name="colorGreen">#20ea59</color>-->
<!--<color name="colorPink">#ea20b0</color>-->
<!--<color name="colorLoginBlue">#2679cc</color>-->
<!--<color name="colorMarkerGreen">#239ced</color>-->
<!--<color name="colorAmber">#ffc107</color>-->
<!--<color name="colorYellow">#ffeb3b</color>-->
<!--<color name="colorRed">#f44336</color>-->
<!--<color name="colorPaleYellow">#fff59d</color>-->
<!--<color name="colorWhite">#ffffff</color>-->
<!--<color name="colorBlack">#000000</color>-->